# PyQSPICE

./: .gitmodules  20231008.ipynb  ClassDetail.ipynb  INSTALL.md  LICENSE  QuickStart.ipynb  QuickStart.md  README.md  pyproject.toml
src/PyQSPICE/: __init__.py  qspice.py
tests/10_DC/: 10_DC.ipynb  10_DC.md  10_DC.py  README.ipynb  README.md  UJ3N065080.qraw  UJ3N065080.qsch
tests/20_AC/: 20_AC.ipynb  20_AC.md  20_AC.py  README.ipynb  README.md  VRM_GainBW.qsch
tests/22_NyquistDia/: 22_NyquistDia.ipynb  22_NyquistDia.md  22_NyquistDia.py  README.ipynb  README.md  VRM_Nyquist.qsch
tests/30_TRAN/: 30_TRAN.ipynb  30_TRAN.md  30_TRAN.py  Buck_COT_TRAN.qsch  README.ipynb  README.md
tests/40_Bode/: 40_Bode.ipynb  40_Bode.md  40_Bode.py  Buck_COT_Bode.qsch  README.ipynb  README.md
tests/50_OP/: OpePoint.ipynb  OpePoint.md  README.ipynb  README.md  op.py  op.qsch
tests/70_VerilogBus/: 70_VerilogBus.ipynb  VerilogBus.qsch  VerilogBus.utf8  cntr.cpp  cntr.v
